2011-01-18  Leo Yang  <leo.yang@torchmobile.com.cn>

Reviewed by Nikolas Zimmermann.

        Unable to indirectly animate visibility of SVGUseElement
        https://bugs.webkit.org/show_bug.cgi?id=50240

        Test case to verify if SVGUseElement inherits parent's
        style change.

        * svg/custom/use-inherit-style-expected.txt: Added.
        * svg/custom/use-inherit-style.svg: Added.
2011-01-18  Leo Yang  <leo.yang@torchmobile.com.cn>

        Reviewed by Nikolas Zimmermann.

        Unable to indirectly animate visibility of SVGUseElement
        https://bugs.webkit.org/show_bug.cgi?id=50240

        SVGUseElement::recalcStyle should take care of its shadow
        tree's style recalculation when it is called with change >= Inherit
        or when childNeedsStyleRecalc() is true because in these two
        cases needStyleRecalc() may not be true.

        Test: svg/custom/use-inherit-style.svg

        * svg/SVGUseElement.cpp:
        (WebCore::SVGUseElement::recalcStyle):

Canonical link: https://commits.webkit.org/66265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76027 268f45cc-cd09-0410-ab3c-d52691b4dbfc